--- a/ofisart.azFront/src/pages/Seyf/Seyf.scss
+++ b/ofisart.azFront/src/pages/Seyf/Seyf.scss
@@ -56,4 +56,16 @@
       }
     }
   }
+
+  @media only screen and (max-width: 768px) {
+    .safe{
+      // background-color: aqua;
+      flex-direction: column;
+      padding: 10px;
+      .card{
+        // background-color: red;
+        width: 100%;
+      }
+    }
+  }
   
